syntax="proto3";

package points;

service PointsService {
    rpc GetPointsByDistrict(QueryByDistrict) returns (PointsByDistrict);
    rpc GetUserStats(QueryByUser) returns (UserStats);
}

message QueryByDistrict {
    int32 districtID=1;
}

message QueryByUser {
    int32 playerID=1;
}

message PointsByDistrict {
    repeated UserPoints user_points=2;
}

message UserPoints {
    int32 playerID=1;
    string username = 2;
    int32 wins = 3;
    int32 losses = 4;
    int32 cancelled = 5;
    int32 totalPoints = 6;
}

message UserStats {
    int32 totalGames = 1;
    int32 wins = 2;
    int32 losses = 3;
    int32 cancelled = 4;
    int32 totalPoints = 5;
    int32 rank = 6;
}

